# BIOMIND

./: .gitignore  Dockerfile  Dockerfile.mcp  README.md  app.py  app_streamlit.py  main.py  mcp_config.json  pyproject.toml  requirements.txt
app/: __init__.py  api.py  chain.py  fetcher.py  indexer.py
mcp_server/: __init__.py  core.py  http_app.py  http_main.py  server.py
scripts/: deploy_hf_space.sh
